nagios/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nagios-deployment
  namespace: monitoring
  labels:
    app: nagios-deployment
spec:
  selector:
    matchLabels:
      app: nagios-core
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nagios-core
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  nagios-container
        image:  jasonrivers/nagios
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
      restartPolicy: Always
