nagios/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nagios-service
  namespace: monitoring
spec:
  selector:
    app: nagios-core
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30008 
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nagios-service
#   namespace: monitoring
# spec:
#   type: ClusterIP
#   selector:
#     app: nagios-core
#   ports:
#     - port: 80
