nagios/manifests/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nagios-ingress
#   namespace: monitoring
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
# spec:
#   rules:
#   - host: nagios.info
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nagios-service
#             port:
#               number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagios-ingress
  namespace: monitoring
  annotations:
    # enable owasp rules protection
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    
    # basic DoS protection
    nginx.ingress.kubernetes.io/limit-rps: "10"
    
    # enable support for url-rewrite with regex support
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: nagios.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nagios-service
            port:
              number: 80
  ingressClassName: nginx
